@@ -1,6 +1,7 @@
 Revision history for DBIx::Class
 
 0.06002
+        - nuke ResultSource caching of ->resultset for consistency reasons
         - fix for -and conditions when updating or deleting on a ResultSet
 
 0.06001 2006-04-08 21:48:43
